@startuml

package accumulator {
  object function {
    apply: string => string
  }

  class Accumulator {
    + push(string): Accumulator
    + markdowns(): [Markdown]
  }

  function -r-> Accumulator
}

package markdown {
    abstract class Markdown {
        + toHtml(): string
    }

    UnorderedList -u-|> Markdown
    OrderedList -u-|> Markdown
    CodeBlock -u-|> Markdown
    Prime -u-|> Markdown
}

Accumulator -d-> markdown

object main {
  onload
}
object test {
  cases
}
main -u-> function
test -u-> function

@enduml